--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         </nav>
     </header>
     <main>
-        <div class="container">            
+        <div class="container">
+            <div class="modal"></div>            
             <h1>o mercado não enxerga quem não aprende de verdade.</h1>
             <span>Na Unigranrio você conta com mais de 40 cursos, 10 unidades no Rio de Janeiro e diversos polos EAD.</span>
             <button>inscreva-se</button>
-            <div class="modal"></div>
         </div>
         <div class="colums">
             <div class="infra">
@@ -61,6 +61,62 @@
                 </p>
             </div>
         </div>
+        <div class="window">
+            <div class="link">
+                <a>inscreva-se!</a>
+            </div>
+        </div>
+        <div class="formulario">
+            <div class="information">
+                <span>Gostaria de mais informações?</span>
+                <p>
+                    Se ainda precisa de mais informações para tomar sua decisão, deixe o seu contato que um de nossos Consultores fará contato.
+                </p>
+            </div>
+            <div class="form">
+                <form action="POST">
+                    <div class="first">
+                        <div class="name">
+                            <p>Nome*</p>
+                            <input type="text" name="name">
+                        </div>
+                        <div class="email">
+                            <p>Email*</p>
+                            <input type="email" name="email">
+                        </div>
+                        <div class="phone">
+                            <p>Celular com DDD*</p>
+                            <input type="tel" name="telefone" placeholder="21999999999">
+                        </div>
+                        <div class="place">
+                            <p>Cidade*</p>
+                            <input type="text" name="place">
+                        </div>
+                    </div>
+                    <div class="courses">
+                        <p>Qual o nível de curso do seu interesse? *</p>
+                        <ul>
+                            <li><input type="checkbox" name="graduacao">Graduação</li>
+                            <li><input type="checkbox" name="cursos livres">Cursos Livres</li>
+                            <li><input type="checkbox" name="pos">Pós-graduação</li>
+                            <li><input type="checkbox" name="mestrado">Mestrado</li>
+                            <li><input type="checkbox" name="doutorado">Doutorado</li>
+                        </ul>
+                        <button>Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </main>
+    <footer>
+        <div class="end">
+            <span>
+                RUA PROF. JOSÉ DE SOUZA HERDY, 1.160 - JARDIM 25 DE AGOSTO, DUQUE DE CAXIAS RIO DE JANEIRO (21) 3219-4040
+            </span>
+            <a>
+                ATENDIMENTO@UNIGRANRIO.COM.BR
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
